[package]
name = "l8r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
once_cell = "1.19.0"
openssh = "0.10.4"
openssh-sftp-client = "0.14.3"
regex = "1.10.4"
regex_static = "0.1.1"
ssh2 = "0.9.4"
