[package]
name = "l8r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
atty = "0.2.14"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
once_cell = "1.19.0"
regex = "1.10.4"
regex_static = "0.1.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
